# sticky-terminal

./: Cargo.toml  README.md
scripts/: build-dmg.sh  build-macos-app.sh  make-dmg-background.swift  setup-notary-profile.sh  sign-and-notarize.sh
src/: main.rs
