[package]
name = "ghost_stickies"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "StickyTerminal"
icon = ["assets/macos/StickyTerminal.icns"]

[features]
default = []
cargo-clippy = []

[dependencies]
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
portable-pty = "0.9.0"
pulldown-cmark = "0.13.0"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vt100 = "0.16.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
